--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<div class="row align-items-center">
 						<div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
 							<h2 class="resume-name mb-0 text-uppercase">Fesri Haris</h2>
-							<div class="resume-tagline mb-3 mb-md-0">Software Engineer</div>
+							<div class="resume-tagline mb-3 mb-md-0">Junior Software Engineer</div>
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
@@ -53,7 +53,7 @@
 						</div>
 						
 						<div class="col text-start">
-							<p class="mb-0">Summarise your career here. <a class="theme-link" href="https://themes.3rdwavemedia.com/resources/sketch-template/resume-sketch-sketch-resume-template-for-software-developers/" target="_blank">You can make a PDF version of your resume using our free Sketch template here</a>. Donec quam felis, ultricies nec, pellentesque eu. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.  Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. </p>
+							<p class="mb-0"><p>I am a <strong>Senior Java Backend Developer</strong> and <strong>Freelance Fullstack Website Developer</strong> with <strong>6+ years of experience</strong> in building secure, scalable, and high-performance applications. My expertise includes Java (SpringBoot), Microservices, API Development, and Database Management, ensuring seamless backend operations. I have hands-on experience with <strong>Cloud Computing</strong> and <strong>DevOps</strong> to optimize system performance and deployment. Beyond backend development, I work with React.js and JavaScript to create intuitive user interfaces, delivering a smooth experience. My focus on AI-driven solutions, such as <strong>Semantic Kernel & Retrieval-Augmented Generation (RAG)</strong>, enhances system intelligence and efficiency. Passionate about <strong>ethical AI and cybersecurity</strong>, I strive to develop fair, impactful, and future-ready technology. With strong <strong>problem-solving and collaboration skills</strong>, I bring <strong>innovative solutions</strong> that improve business performance and user experience.</p></p>
 						</div><!--//col-->
 					</div>
 				</div><!--//resume-intro-->
