--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-	<title>DevResume - Bootstrap Resume/CV Template For Software Developers</title>
+	<title>Fesri Haris</title>
 	
 	<!-- Meta -->
 	<meta charset="utf-8">
@@ -174,22 +174,22 @@
 								</div><!--//item-->
 							</section><!--//project-section-->	
 						</div><!--//resume-main-->
-						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
+							<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="skills-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Skills</h3>
 								<div class="item">
 									<h4 class="item-title">Technical</h4>
-									<ul class="list-unstyled resume-skills-list">
-										<li class="mb-2">JavaScript/Angular/React/Vue</li>
-										<li class="mb-2">Python/Ruby/PHP<li>
+										<ul class="list-unstyled resume-skills-list">
+											<li class="mb-2">JavaScript/Angular/React/Vue</li>
+											<li class="mb-2">Python/Ruby/PHP<li>
 											<li class="mb-2">Node.js/ASP.NET</li>
 											<li class="mb-2">PostgreSQL/MySQL</li>
 											<li class="mb-2">Object-oriented design</li>
 											<li class="mb-2">Design and implement database structures</li>
 											<li>Lead and deliver complex software systems</li>
 										</ul>
-									</div><!--//item-->
-									<div class="item">
+								</div><!--//item-->
+								<div class="item">
 										<h4 class="item-title">Professional</h4>
 										<ul class="list-unstyled resume-skills-list">
 											<li class="mb-2">Effective communication</li>
@@ -197,9 +197,9 @@
 												<li class="mb-2">Strong problem solver</li>
 												<li>Good time management</li>
 											</ul>
-										</div><!--//item-->
-									</section><!--//skills-section-->
-									<section class="education-section py-3">
+								</div><!--//item-->
+							</section><!--//skills-section-->
+							<section class="education-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-3">
@@ -213,8 +213,8 @@
 												<div class="resume-degree-time text-muted">2016 - 2017</div>
 											</li>
 										</ul>
-									</section><!--//education-section-->
-									<section class="education-section py-3">
+							</section><!--//education-section-->
+							<section class="education-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
 										<ul class="list-unstyled resume-awards-list">
 											<li class="mb-3">
@@ -226,15 +226,15 @@
 												<div class="text-muted">Oracle Aenean (2020)</div>
 											</li>
 										</ul>
-									</section><!--//education-section-->
-									<section class="skills-section py-3">
+							</section><!--//education-section-->
+							<section class="skills-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Languages</h3>
 										<ul class="list-unstyled resume-lang-list">
 											<li class="mb-2">English <span class="text-muted">(Native)</span></li>
 											<li>Spanish <span class="text-muted">(Professional)</span></li>
 										</ul>
-									</section><!--//certificates-section-->
-									<section class="skills-section py-3">
+							</section><!--//certificates-section-->
+							<section class="skills-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>
 										<ul class="list-unstyled resume-interests-list mb-0">
 											<li class="mb-2">Climbing</li>
@@ -242,10 +242,10 @@
 											<li class="mb-2">Photography</li>
 											<li>Travelling</li>
 										</ul>
-									</section><!--//certificates-section-->
+							</section><!--//certificates-section-->
 									
-								</aside><!--//resume-aside-->
-							</div><!--//row-->
+							</aside><!--//resume-aside-->
+						</div><!--//row-->
 						</div><!--//resume-body-->
 						<hr>
 						<div class="resume-footer text-center">
