edit resume contact

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
-								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link" href="tel:#">0813 5741 9464</a></li>
-								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:#">fesri1st@gmail.com</a></li>
-								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="#">www.fesriharis.github.io</a></li>
+								<li class="mb-2"><i class="fas fa-phone-square fa-fw fa-lg me-2 "></i><a class="resume-link" href="https://api.whatsapp.com/send?phone=6281357419464">0813 5741 9464</a></li>
+								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg me-2"></i><a class="resume-link" href="mailto:fesri1st@gmail.com">fesri1st@gmail.com</a></li>
+								<li class="mb-2"><i class="fas fa-globe fa-fw fa-lg me-2"></i><a class="resume-link" href="https://fesri-haris.github.io/resume/">www.fesri-haris.github.io</a></li>
 								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg me-2"></i>Karawang, Indonesia</li>
 							</ul>
 						</div><!--//resume-contact-->
@@ -53,7 +53,7 @@
 						</div>
 						
 						<div class="col text-start">
-							<p class="mb-0"><p>I am a <strong>Senior Java Backend Developer</strong> and <strong>Freelance Fullstack Website Developer</strong> with <strong>6+ years of experience</strong> in building secure, scalable, and high-performance applications. My expertise includes Java (SpringBoot), Microservices, API Development, and Database Management, ensuring seamless backend operations. I have hands-on experience with <strong>Cloud Computing</strong> and <strong>DevOps</strong> to optimize system performance and deployment. Beyond backend development, I work with React.js and JavaScript to create intuitive user interfaces, delivering a smooth experience. My focus on AI-driven solutions, such as <strong>Semantic Kernel & Retrieval-Augmented Generation (RAG)</strong>, enhances system intelligence and efficiency. Passionate about <strong>ethical AI and cybersecurity</strong>, I strive to develop fair, impactful, and future-ready technology. With strong <strong>problem-solving and collaboration skills</strong>, I bring <strong>innovative solutions</strong> that improve business performance and user experience.</p></p>
+							<p class="mb-0"><p>I am a <strong>Java Backend Developer</strong> and <strong>Freelance Fullstack Website Developer</strong> with <strong>6+ years of experience</strong> in building secure, scalable, and high-performance applications. My expertise includes Java (SpringBoot), Microservices, API Development, and Database Management, ensuring seamless backend operations. I have hands-on experience with <strong>Cloud Computing</strong> and <strong>DevOps</strong> to optimize system performance and deployment. Beyond backend development, I work with React.js and JavaScript to create intuitive user interfaces, delivering a smooth experience. My focus on AI-driven solutions, such as <strong>Semantic Kernel & Retrieval-Augmented Generation (RAG)</strong>, enhances system intelligence and efficiency. Passionate about <strong>ethical AI and cybersecurity</strong>, I strive to develop fair, impactful, and future-ready technology. With strong <strong>problem-solving and collaboration skills</strong>, I bring <strong>innovative solutions</strong> that improve business performance and user experience.</p></p>
 						</div><!--//col-->
 					</div>
 				</div><!--//resume-intro-->
