--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
 							<section class="skills-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Languages</h3>
 										<ul class="list-unstyled resume-lang-list">
-											<li class="mb-2">English <span class="text-muted">(Native)</span></li>
-											<li>Spanish <span class="text-muted">(Professional)</span></li>
+											<li class="mb-2">English <span class="text-muted">(Fluent)</span></li>
+											<li class="mb-2">Bahasa Indonesia <span class="text-muted">(Native)</span></li>
 										</ul>
 							</section><!--//certificates-section-->
 							<section class="skills-section py-3">
@@ -250,9 +250,9 @@
 						<hr>
 						<div class="resume-footer text-center">
 							<ul class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
-								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fa-brands fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">github.com/username</span></a></li>
-								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="#"><i class="fa-brands fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">linkedin.com/in/username</span></a></li>
-								<li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="#"><i class="fa-brands fa-square-x-twitter fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">@twittername</span></a></li>
+								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="https://github.com/fesri-haris"><i class="fa-brands fa-github-square fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">github.com/fesri-haris</span></a></li>
+								<li class="list-inline-item mb-lg-0 me-3"><a class="resume-link" href="https://www.linkedin.com/in/fesriharis/"><i class="fa-brands fa-linkedin fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">linkedin.com/in/fesriharis</span></a></li>
+								<li class="list-inline-item mb-lg-0 me-lg-3"><a class="resume-link" href="https://www.instagram.com/fesri_haris/"><i class="fa-brands fa-square-instagram fa-2x me-2" data-fa-transform="down-4"></i><span class="d-none d-lg-inline-block text-muted">@fesriharis</span></a></li>
 							</ul>
 						</div><!--//resume-footer-->
 					</article>
