--- a/index.html
+++ b/index.html
@@ -180,13 +180,12 @@
 								<div class="item">
 									<h4 class="item-title">Technical</h4>
 										<ul class="list-unstyled resume-skills-list">
-											<li class="mb-2">JavaScript/Angular/React/Vue</li>
-											<li class="mb-2">Python/Ruby/PHP<li>
-											<li class="mb-2">Node.js/ASP.NET</li>
-											<li class="mb-2">PostgreSQL/MySQL</li>
-											<li class="mb-2">Object-oriented design</li>
-											<li class="mb-2">Design and implement database structures</li>
-											<li>Lead and deliver complex software systems</li>
+											<li class="mb-2">Java, JavaScript, PHP, Microservices</li>
+											<li class="mb-2">React.js, HTML5, Tailwind CSS<li>
+											<li class="mb-2">MySQL, PostgreSQL, Redis</li>
+											<li class="mb-2">Azure, Kubernetes, Docker,  CI/CD</li>
+											<li class="mb-2">OAuth 2.0, MFA, Web Security</li>
+											<li class="mb-2">Semantic Kernel, RAG</li>
 										</ul>
 								</div><!--//item-->
 								<div class="item">
