--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
 										<h4 class="item-title">Professional</h4>
 										<ul class="list-unstyled resume-skills-list">
 											<li class="mb-2">Effective communication</li>
-											<li class="mb-2">Team player<li>
-												<li class="mb-2">Strong problem solver</li>
-												<li>Good time management</li>
-											</ul>
+											<li class="mb-2">Collaborative team player<li>
+											<li class="mb-2">Strong problem solver</li>
+											<li>Good time management</li>
+										</ul>
 								</div><!--//item-->
 							</section><!--//skills-section-->
 							<section class="education-section py-3">
@@ -236,10 +236,10 @@
 							<section class="skills-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>
 										<ul class="list-unstyled resume-interests-list mb-0">
-											<li class="mb-2">Climbing</li>
-											<li class="mb-2">Snowboarding</li>
-											<li class="mb-2">Photography</li>
-											<li>Travelling</li>
+											<li class="mb-2">Social Entrepreneurship</li>
+											<li class="mb-2">SDGs in Technology</li>
+											<li class="mb-2">Business Growth & MSMEs</li>
+											<li>Education & Technology</li>
 										</ul>
 							</section><!--//certificates-section-->
 									
