--- a/index.html
+++ b/index.html
@@ -202,14 +202,14 @@
 										<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-3">
-												<div class="resume-degree font-weight-bold">MSc in Computer Science</div>
-												<div class="resume-degree-org text-muted">University College London</div>
-												<div class="resume-degree-time text-muted">2012 - 2016</div>
+												<div class="resume-degree font-weight-bold">Science Major (2012-2015)</div>
+												<div class="resume-degree-org text-muted">SMA Negeri 8 Kota Cirebon</div>
+												<div class="resume-degree-time text-muted">Final Average Score: <strong>84.2</strong></div>
 											</li>
 											<li>
-												<div class="resume-degree font-weight-bold">BSc Maths and Physics</div>
-												<div class="resume-degree-org text-muted">Imperial College London</div>
-												<div class="resume-degree-time text-muted">2016 - 2017</div>
+												<div class="resume-degree font-weight-bold">BEd Information Technology Education 2015 - 2019 (Incomplete)</div>
+												<div class="resume-degree-org text-muted">Brawijaya University</div>
+												<div class="resume-degree-time text-muted">Completed <strong>127 credits</strong>, <strong>GPA: 3.52</strong></div>
 											</li>
 										</ul>
 							</section><!--//education-section-->
